openshift-artifacts/webapp-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: viz-webapp
  labels:
    app: viz
  annotations:
    # The following triggers cert-manager to obtain a certificate automatically
    # using the production Let’s Encrypt environment
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: viz.whsunresearch.group
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: viz
            port:
              number: 8000
  tls:
  # names to include in the certificate, this should match the hosts in the
  # rules section above
  - hosts:
    - viz.whsunresearch.group
    # cert-manager will create a secret with this name to store the cert and key
    secretName: viz-webapp
